[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
# ferinth = "1.4.1"
ferinth = { git = "https://github.com/4JX/ferinth", rev = "bf23b8d" }
# ferinth = { path = "../../ferinth" }
sha-1 = "0.10.0"
sha2 = "0.10.2"
mc_mod_meta = { path = "../mc_mod_meta" }
regex = "1.5.4"
lazy_static = "1.4.0"
hex = "0.4.3"
bytes = "1.1.0"
# daedalus = "0.1.14"
daedalus = { git = "https://github.com/4JX/daedalus", rev = "c977bb0" }
epi = { git = "https://github.com/4JX/egui", rev = "a312f4b" }
thiserror = "1.0.30"
directories = "4.0.1"
tracing = "0.1.31"
parking_lot = "0.12.0"
crossbeam-channel = "0.5.2"
trash = "2.0.4"

# For their error types
serde_json = "1.0.79"
reqwest = "0.11.9"
