[package]
name = "back"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
ferinth = "2.3.0"
sha-1 = "0.10.0"
sha2 = "0.10.2"
mc_mod_meta = { path = "../mc_mod_meta" }
once_cell = "1.10.0"
hex = "0.4.3"
bytes = "1.1.0"
# daedalus = "0.1.14"
daedalus = { git = "https://github.com/4JX/daedalus", rev = "c977bb0" }
eframe = { git = "https://github.com/4JX/egui", rev = "1ca27c4" }
# eframe = { path = "../../egui/eframe" }
thiserror = "1.0.30"
directories = "4.0.1"
tracing = "0.1.31"
parking_lot = "0.12.0"
crossbeam-channel = "0.5.2"
trash = "2.0.4"
serde = "1.0.136"
serde_json = "1.0.79"
zip = "0.6.2"
image = "0.24.2"
futures = "0.3.21"
async-fetcher = { git = "https://github.com/4JX/async-fetcher", rev = "8b75189" }

# For their error types
reqwest = { version = "0.11.9", default-features = false }
