[package]
name = "m_cubed"
version = "0.0.2"
authors = ["4JX"]
edition = "2021"
homepage = "https://github.com/4JX/mCubed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eframe = "0.16.0"
# eframe = { git = "https://github.com/emilk/egui", rev = "366f544" }
eframe = { git = "https://github.com/4JX/egui", rev = "3a4a636", features = [
    "persistence",
] }
image = "0.24.0"
serde = "1.0.136"
serde_json = "1.0.78"
back = { path = "../back" }
color-eyre = "0.6.0"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
crossbeam-channel = "0.5.2"
