[package]
name = "mc_mod_meta"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.30"
toml = "0.5.8"
regex = "1.5.4"
lazy_static = "1.4.0"
