[package]
name = "mc_mod_meta"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
thiserror = "1.0.31"
toml = "0.5.9"
